[metadata]
name = st_clustering
version = file: src/VERSION
author = Eren Cakmak, Manuel Plank
author_email = cakmak@dbvis.inf.uni-konstanz.de
description = Package containing various spatio-temporal clustering algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbvis-ukon/spatio-temporal-clustering
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	scipy
	scikit-learn
	hdbscan
	joblib
include_package_data = True

[options.packages.find]
where = src